// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-type-check > should allow to configure eslint-webpack-plugin options 1`] = `
{
  "plugins": [
    ESLintWebpackPlugin {
      "key": "ESLintWebpackPlugin",
      "options": {
        "cache": true,
        "cacheLocation": "node_modules/.cache/eslint-webpack-plugin/.eslintcache",
        "emitError": true,
        "emitWarning": true,
        "exclude": [
          "node_modules",
          "src/index.js",
        ],
        "extensions": [
          "js",
          "jsx",
          "mjs",
          "cjs",
          "ts",
          "tsx",
          "mts",
          "cts",
        ],
        "failOnError": true,
        "resourceQueryExclude": [],
      },
      "run": [Function],
    },
  ],
}
`;

exports[`plugin-type-check > should apply eslint-webpack-plugin correctly 1`] = `
{
  "plugins": [
    ESLintWebpackPlugin {
      "key": "ESLintWebpackPlugin",
      "options": {
        "cache": true,
        "cacheLocation": "node_modules/.cache/eslint-webpack-plugin/.eslintcache",
        "emitError": true,
        "emitWarning": true,
        "extensions": [
          "js",
          "jsx",
          "mjs",
          "cjs",
          "ts",
          "tsx",
          "mts",
          "cts",
        ],
        "failOnError": true,
        "resourceQueryExclude": [],
      },
      "run": [Function],
    },
  ],
}
`;

exports[`plugin-type-check > should disable eslint plugin when enable is false 1`] = `{}`;
